ADD: signup page design && send email
